responsive design && dark mode

--- a/src/posts/types-vs-interfaces/types-vs-interfaces.mdx
+++ b/src/posts/types-vs-interfaces/types-vs-interfaces.mdx
@@ -121,7 +121,7 @@ Declaration merging via interfaces is very important for when we are writing 3rd
 
 <DifferenceHeader>So, what should I be using for React?</DifferenceHeader>
 
-In general, it doesn't really matter, just be consistent. Personally, I prefer interfaces over types most of the time until I **need** to create a type specifically. This occurs the most when you need to merge declarations coming from types or interfaces into a single type.
+In general, it doesn't really matter, just be consistent. Personally, I prefer interfaces over types most of the time until I need to create a type specifically. This occurs the most when you need to merge declarations coming from types or interfaces into a single type.
 
 For example:
 
